[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "group-causation"
version = "0.0.1"
description = "A python library to perform causal inference tasks over groups of time series"
authors = [{ name = "Joaquín Mateos Barroso", email = "jmateosbarroso@gmail.com" }]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.9,<3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24.3,<2.0",
    "numba>=0.60.0",
    "more_itertools>=10.1.0",
    "tqdm>=4.65.0",
    "dcor>=0.6",
    "deap>=1.4.2",
    "memory_profiler>=0.60.0",
    "scipy>=1.11.4",
    "pandas>=1.5.3",
    "seaborn>=0.12.2",
    "lingam==1.5.5", # There are some issues with the latest version
    "statsmodels==0.13.4",
    "tigramite>=5.2",
    "pgmpy>=0.1.19,<1",
    "causalai @ git+https://github.com/salesforce/causalai.git@v2.0.0",
]

[project.urls]
Homepage = "https://github.com/JoaquinMateosBarroso/group-causation"